test/error/semantic/naming_conflict_with_func.kat
func x(y: int) => int {
  return y;
}

func main(argc: int, argv: str) => int {
  let x: int = 1;
  return 0;
}
